- change in some icons & removed unused icon from resoures file.
- mimelist save folder moved to .config/corebox.
- fixed all the time opening start when opening other app.
- fixed system app not showing in the recent activites.
- trash a picture from coreimage, will also delete entry from path qstringlist
- fixed empty trash not working in corefm.



version 2,Released date Monday, March 26, 2018

- fixed tabengine in corebox.
- fixed rename problem in corefm.
- fixed view mode in corefm.
- icondlg.cpp and header >> removed
- arrange item fixed in corefm.
- fixed hidden is not saving it's last state.
- improved archiving in corefm.
- fixed alarm page in coretime.
- removed coretime settings.
- fixed page select in coretime.
- fixed sound path in coretime.
- fixed the settings.
- changed start ui.
- removed background from start.
- fixed alarm edit button not working properly.
- creating archive in all all format added in corefm.
- fixed extract here problem in corefm.
- upgraded AppsName to enum in corebox.
- fixed not going to the currently opened tab in corebox.
- bookmark location changed to .config/coreBox folder
- added coreaction section in settings.
- fixed properties window icon in corefm.
- coreaction's size code moved from main.cpp to coreaction.cpp.
- bookmark location button removed from bookmark app.
- fixed tool button in bookmark.
- fixed corepaint save dialog in corepaint.
- fixed coreaction is creating setting file in config folder.
- removed demon from corefm.
- changed page ui of all apps.
- fixed corefm's new page is not going in new opened tab.
- if folder is empty shows a message in corefm.
- added multiple tab support in corepad.
- limited the openable tab in corepad to 10.
- added multi-monitor support.
- fixed multi-window problem in corebox.
- fixed multi-monitor problem in showing message.
- added option to resize corebox.
- added display page in dashboard app.
- added new information in help app.
- added some links in README.md file.
